--- a/index_new.html
+++ b/index_new.html
@@ -15,7 +15,6 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="css/cs598-1.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -86,16 +85,17 @@
         </header>
         <div id="search-result" class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="new-input-area">
-                        <span>YA</span>
                     </div>    
                     <div class="map-area">
-                        <span>YA</span>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <span>YA</span>
+                <div class="col-md-9">
+                    <div class="col-md-9">
+                        <div class="result-area">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -103,19 +103,22 @@
         <section id="search" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <div id="result_detail_div">
-                    <div class="page-header">
-                        <h1>Customized feature</h1>
+                <div class="result_area">
+                    <div id="result_detail_div">
+                        <div class="page-header">
+                            <h1>Customized feature</h1>
+                        </div>
+                        <div class="input-area">
+                            <div><span>Quota remained: </span> <span id="quota_num">9</span></div>
+                        </div>
                     </div>
-                    <div class="input-area">
-                        <div><span>Quota remained: </span> <span id="quota_num">9</span></div>
-                    </div>
+                    <br>
+                    <span>Categories: </span>
+                    <select multiple id="tags" style="width:300px">
+                    </select>
+                    <br>
+                    <button id="search-btn" class="btn btn-default btn-lg">Search result</button>
                 </div>
-                <br>
-                <select multiple id="tags" style="width:300px">
-                </select>
-                <br>
-                <button id="search-btn" class="btn btn-default btn-lg">Search result</button>
             </div>
         </div>
         </section>
@@ -188,7 +191,6 @@
         <!-- Plugin JavaScript -->
         <script src="js/jquery.easing.min.js"></script>
 
-        <script src="js/cs598.js"></script>
         <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
@@ -198,6 +200,8 @@
         <script src="select2-3.5.2/select2.min.js"></script>
         <script src="select2-3.5.2/"></script>
         <link href="select2-3.5.2/select2.css" rel="stylesheet">
+        <link href="css/cs598-1.css" rel="stylesheet">
+        <script src="js/cs598.js"></script>
 
     </body>
 
