--- a/index_new.html
+++ b/index_new.html
@@ -56,7 +56,7 @@
                     <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#download">Download</a>
+                    <a class="page-scroll" href="#search">Search</a>
                     </li>
                     <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Restaurant</h1>
+                        <h3 class="brand-heading">Where to go for lunch?</h1>
                         <h4 class="intro-text">Recommend restaurant via customized reauest<br>Created by XXX</h4>
                         <a href="#search" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -99,6 +99,20 @@
                 </div>
             </div>
         </div>
+
+        <!-- About Section -->
+        <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>About Grayscale</h2>
+                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            </div>
+        </div>
+        </section>
+
+
         <!-- Search Section -->
         <section id="search" class="container content-section text-center">
         <div class="row">
@@ -106,7 +120,7 @@
                 <div class="result_area">
                     <div id="result_detail_div">
                         <div class="page-header">
-                            <h1>Customized feature</h1>
+                            <h2>Customized feature</h2>
                         </div>
                         <div class="input-area">
                             <div><span>Quota remained: </span> <span id="quota_num">9</span></div>
@@ -123,31 +137,7 @@
         </div>
         </section>
 
-        </section>
 
-        <!-- About Section -->
-        <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-        </section>
-        <!-- Download Section -->
-        <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-                </div>
-            </div>
-        </div>
-        </section>
 
         <!-- Contact Section -->
         <section id="contact" class="container content-section text-center">
