Add new icons in search page

--- a/index_new.html
+++ b/index_new.html
@@ -92,8 +92,11 @@
                     </div>
                 </div>
                 <div class="col-md-9">
-                    <div class="col-md-9">
-                        <div class="result-area">
+                    <div id="result-area">
+                        <div class="row">
+                            <div id="22" class="col-md-2"></div>
+                            <div id="33" class="col-md-6"></div>
+                            <div id="44" class="col-md-4"></div>
                         </div>
                     </div>
                 </div>
