add functionality to google map

--- a/map.html
+++ b/map.html
@@ -1,31 +1,21 @@
 <html>
   <head>
+    <!-- google server googlemap API  -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization,places"></script>
 
+    <!-- local googlemap related manipulation js library -->
+    <script src="js/googlemap.js"></script>
+
+    <!-- script to LOAD googlemap-->
     <script>
-      function init() {
-        var mapProp = {
-          center : new google.maps.LatLng(40.11094363, -88.22300514) , 
-          zoom : 12 , 
-          mapTypeId : google.maps.MapTypeId.ROADMAP
-        }
-        map = new google.maps.Map(document.getElementById("googleMap"), mapProp)
-      }
+      google.maps.event.addDomListener(window, 'load', initializeMap)
     </script>
 
-    <script>
-      google.maps.event.addDomListener(window, 'load', init)
-    </script>
-
-    <style>
-      html, body, #googleMap {
-            height: 100%;
-            margin: 0px;
-            padding: 0px
-      }
-    </style>
+    <!-- local css to beautify google map -->
+    <link rel="stylesheet" type="text/css" href="css/googlemap.css">
 
   </head>
+
   <body>
     <div id="googleMap"></div>
   </body>
