--- a/index_new.html
+++ b/index_new.html
@@ -28,6 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
 
     </head>
 
@@ -73,10 +74,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h3 class="brand-heading">Where to go for lunch?</h1>
-                        <h4 class="intro-text">Recommend restaurant via customized reauest<br>Created by XXX</h4>
-                        <a href="#search" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                        <h1 class="brand-heading">Where to go for lunch?</h1>
+                        <h4 class="intro-text">Customized result by different weights to<br>
+                        price, location, and dining enviroment.
+                        </h4>
+                        <br>
+                        <br>
+                        <a href="#search" class="btn-circle page-scroll">
+                            <i class="fa fa-search animated"></i>
                         </a>
                     </div>
                 </div>
@@ -107,7 +112,7 @@
         <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
+                <h2>About</h2>
                 <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
@@ -122,6 +127,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <div class="result_area">
                     <div id="result_detail_div">
+
                         <div class="page-header">
                             <h2>Customized feature</h2>
                         </div>
@@ -130,11 +136,14 @@
                         </div>
                     </div>
                     <br>
-                    <span>Categories: </span>
+                    <span>Categories: (optional) </span>
+                    <br>
                     <select multiple id="tags" style="width:300px">
                     </select>
                     <br>
-                    <button id="search-btn" class="btn btn-default btn-lg">Search result</button>
+                    <br>
+                    <button id="search-btn" class="btn btn-primary">Search</button>
+                    <button id="clear-btn" class="btn btn-danger">Clear</button>
                 </div>
             </div>
         </div>
