--- a/index_new.html
+++ b/index_new.html
@@ -14,6 +14,11 @@
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
+        <script src="js/jquery.js"></script>
+        <script src="js/grayscale.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization,places"></script>
+        <script src="js/googlemap.js"></script>
+
         <!-- Custom CSS -->
 
         <!-- Custom Fonts -->
@@ -93,7 +98,7 @@
                 <div class="col-md-3">
                     <div class="new-input-area">
                     </div>    
-                    <div class="map-area">
+                    <div class="map-area" id="googleMap">
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -185,7 +190,6 @@
         </footer>
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
@@ -194,17 +198,15 @@
         <script src="js/jquery.easing.min.js"></script>
 
         <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
         <!-- Custom Theme JavaScript -->
-        <script src="js/grayscale.js"></script>
         <script src="select2-3.5.2/select2.min.js"></script>
         <script src="select2-3.5.2/"></script>
         <link href="select2-3.5.2/select2.css" rel="stylesheet">
         <script src="js/cs598.js"></script>
         <link href="css/cs598-1.css" rel="stylesheet">
-
+        <link rel="stylesheet" type="text/css" href="css/googlemap.css">
     </body>
 
 </html>
