--- a/index_new.html
+++ b/index_new.html
@@ -100,8 +100,15 @@
                 <div class="col-md-3">
                     <div class="new-input-area">
                     </div>    
+                    <br>
+                    <br>
                     <div class="map-area" id="googleMap">
                     </div>
+                    <br>
+                    <br>
+                    <div id="slider-range-min"></div>
+                    <span>Maximum distance:</span>
+                    <span id="distance">1000 meter</span>
                 </div>
                 <div class="col-md-9">
                     <div id="result-area">
@@ -139,11 +146,10 @@
                             <h2>Customized feature</h2>
                         </div>
                         <div class="input-area">
-                            <div>
+                            <div id="quota-area">
                                 <span>Quota remained: </span> 
                                 <span id="quota_num">9</span>
                                 <i id = "ex" class="fa fa-exclamation"></i>
-                                <span id="alert-msg">Remain quota cannot smaller than zero</span>
                             </div>
                         </div>
                     </div>
