modified css, html

--- a/index_new.html
+++ b/index_new.html
@@ -95,9 +95,9 @@
             </div>
         </div>
         </header>
-        <div id="search-result" class="container">
+        <div id="search-result" class="container borderless_container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 search-result-left">
                     <div class="new-input-area">
                     </div>    
                     <div class="map-area" id="googleMap">
@@ -120,9 +120,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>FoodHero is a customized resteraunt search engine. </br> Our restaurant data and reviews was from 
+                <a href="http://startbootstrap.com/template-overviews/grayscale/">yelp.com</a>
+                .</p>
+                <p>Differnt user usually have different preferance about price, location and environment. Even a same user will not have same needs in different seaches. By using FoodHero, user can give differnt weights to each aspect based on their searching preferance.
+                </p>
+                
             </div>
         </div>
         </section>
