modified result page layout, change starts

--- a/index_new.html
+++ b/index_new.html
@@ -119,7 +119,7 @@
                     <br>
                     
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 search-result-right">
                     <div id="result-area">
                         <div class="row">
                             <div id="22" class="col-md-2"></div>
@@ -172,7 +172,7 @@
                     </select>
                     <br>
                     <br>
-                    <button id="search-btn" class="btn btn-primary">Search</button>
+                    <button id="search-btn" class="btn btn-primary" href="main-nav">Search</button>
                     <button id="clear-btn" class="btn btn-danger">Clear</button>
                 </div>
             </div>
