modified star align

--- a/index_new.html
+++ b/index_new.html
@@ -164,16 +164,17 @@
                                 <i id = "ex" class="fa fa-exclamation"></i>
                             </div>
                         </div>
+                        <div class = "category-area">
+                            <br>
+                            <div class = "text-align-left"><span>Categories: (optional) </span></div>
+                            <select multiple id="tags" style="width:330px"></select>
+                        </div>
+                        <br>
+                        <div>
+                            <button id="search-btn" class="btn btn-primary butten-right-margin" href="main-nav">Search</button>
+                            <button id="clear-btn" class="btn btn-danger butten-right-margin">Clear</button>
+                        </div>
                     </div>
-                    <br>
-                    <span>Categories: (optional) </span>
-                    <br>
-                    <select multiple id="tags" style="width:300px">
-                    </select>
-                    <br>
-                    <br>
-                    <button id="search-btn" class="btn btn-primary" href="main-nav">Search</button>
-                    <button id="clear-btn" class="btn btn-danger">Clear</button>
                 </div>
             </div>
         </div>
