--- a/index_new.html
+++ b/index_new.html
@@ -139,7 +139,7 @@
                 <p>FoodHero is a customized resteraunt search engine. </br> Our restaurant data and reviews was from 
                 <a href="http://startbootstrap.com/template-overviews/grayscale/">yelp.com</a>
                 .</p>
-                <p>Differnt user usually have different preferance about price, location and environment. Even a same user will not have same needs in different seaches. By using FoodHero, user can give differnt weights to each aspect based on their searching preferance.
+                <p>Differnt user usually have different preference about price, location and environment. Even a same user will not have same needs in different seaches. By using FoodHero, user can give differnt weights to each aspect based on their searching preference.
                 </p>
                 
             </div>
@@ -186,21 +186,10 @@
         <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Us</h2>
+                <p>Feel free to email us to provide some feature on our website, give us suggestions for new ideas and functionality, or to just say hello!</p>
+                <p><a href="mailto:bchiang3@illinois.edu">bchiang3@illinois.edu</a>
                 </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                    <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                    <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                    <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
             </div>
         </div>
         </section>
