--- a/index_new.html
+++ b/index_new.html
@@ -158,7 +158,7 @@
                             <h2>Customized feature</h2>
                         </div>
                         <div class="input-area">
-                            <div id="quota-area">
+                            <div id="quota-area" class = "padding-b-10">
                                 <span>Quota remained: </span> 
                                 <span id="quota_num">9</span>
                                 <i id = "ex" class="fa fa-exclamation"></i>
@@ -166,7 +166,7 @@
                         </div>
                         <div class = "category-area">
                             <br>
-                            <div class = "text-align-left"><span>Categories: (optional) </span></div>
+                            <div class = "text-align-left padding-b-2"><span>Categories: (optional) </span></div>
                             <select multiple id="tags" style="width:330px"></select>
                         </div>
                         <br>
