--- a/index_new.html
+++ b/index_new.html
@@ -61,13 +61,13 @@
                     <a href="#page-top"></a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a  class="page-scroll" id="ys" href="#about">About</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#search">Search</a>
+                    <a  class="page-scroll" href="#search">Search</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a  class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -141,7 +141,11 @@
                 .</p>
                 <p>Differnt user usually have different preference about price, location and environment. Even a same user will not have same needs in different seaches. By using FoodHero, user can give differnt weights to each aspect based on their searching preference.
                 </p>
-                
+                <br>
+                <br>
+                <br>
+                <br>
+
             </div>
         </div>
         </section>
@@ -178,6 +182,9 @@
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
         </section>
 
 
@@ -193,7 +200,9 @@
             </div>
         </div>
         </section>
-
+        <br>
+        <br>
+        <br>
         <!-- Footer -->
         <footer>
         <div class="container text-center">
