modified result-right layout

--- a/index_new.html
+++ b/index_new.html
@@ -121,10 +121,12 @@
                 </div>
                 <div class="col-md-9 search-result-right">
                     <div id="result-area">
+                        <div id = "result-inner-area">
                         <div class="row">
                             <div id="22" class="col-md-2"></div>
                             <div id="33" class="col-md-6"></div>
                             <div id="44" class="col-md-4"></div>
+                        </div>
                         </div>
                     </div>
                 </div>
