add popover on point

--- a/index_new.html
+++ b/index_new.html
@@ -14,7 +14,6 @@
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/googlemap.css">
-
         <script src="js/jquery.js"></script>
         <script src="js/grayscale.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization,places"></script>
@@ -228,6 +227,7 @@
         <script src="select2-3.5.2/"></script>
         <link href="select2-3.5.2/select2.css" rel="stylesheet">
         <script src="js/cs598.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
         <link href="css/cs598-1.css" rel="stylesheet">
     </body>
 
